# cross_notebooks

./: .gitignore  README.md  pyproject.toml
cross_notebooks/: workshop_20260309.ipynb
notebooks/: workshop_20260309.ipynb  workshop_20260309_assumptions.ipynb  workshop_20260309_cross_plots.ipynb  workshop_20260309_data_analysis.ipynb
src/cross_notebooks/: plots.py
