[project]
name = "cross-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crosscontract>=0.2.2",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
